--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,9 +128,13 @@ main .cartao-pokemon .tipo {
 }
 
 main .descricao {
+  margin-top: 10px;
   font-size: 18px;
   max-height: 80px;
   overflow-y: scroll;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #4592c4;
 }
 
 .rodape {
